workshop04/wordpress-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: wordpress-app
    labels:
        app: wordpress

spec:
    replicas: 1
        
    selector:
        matchLabels:
            app: wordpress-pod

    template:
        metadata:
            name: wordpress-app-pod
            labels:
                app: wordpress-pod
        spec:
            volumes:
                - name: wp-vol
                  persistentVolumeClaim:
                    claimName: wp-pvc
            containers:
            - name: wp-container
              image: wordpress:latest
              imagePullPolicy: IfNotPresent
              ports:
              - name: wp-port
                  containerPort: 80
              
              volumeMounts:
              - name: wp-vol
                  mountPath: /var/www/html

---
apiVersion: v1
kind: Service
metadata:
    name: wordpresssvc
    labels:
        app: wordpress
spec:
    type: ClusterIP
    selector:
        app: wordpress-pod
    ports:
    - name: app-port
      port: 8080
      targetPort: wordpress-port
